--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <h1>The Ball Game</h1>
-    <div class="ball">100</div>
+    <div onclck="onBallClick()" class="ball">100</div>
+
+    <script src="js/main.js"></script>
   </body>
 </html>
