--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <h1>The Ball Game</h1>
-    <div onclick="onBallClick(this)" class="ball">100</div>
+    <div onclick="onBallClick(this, 400, 100)" class="ball">100</div>
+    <div onclick="onBallClick(this, 600, 100)" class="ball2">200</div>
 
     <script src="js/util.js"></script>
     <script src="js/main.js"></script>
